--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1704,7 +1704,7 @@ to already see it making such an impact, hoping to soon allow everyone to be fea
 % 	\url{https://en.wikipedia.org/wiki/Rust_(programming_language)/}
 
 \bibitem{survey} Stack Overflow,
-	\textit{Annual Developer Survey} (2022) \\
+	\textit{Annual Developer Survey} (03/2023) \\
 	\url{https://insights.stackoverflow.com/survey/}
 
 % \bibitem{Rust-for-Linux} Wikipedia,
@@ -1748,51 +1748,51 @@ to already see it making such an impact, hoping to soon allow everyone to be fea
 %%% section 2.1 links
 
 \bibitem{issue-libp2p} GitHub,
-	\textit{rust-libp2p -- Pull Request \#3312} (2023) \\
+	\textit{rust-libp2p -- Pull Request \#3312} (03/2023) \\
 	\url{https://github.com/libp2p/rust-libp2p/pull/3312}
 
 
 %%% section 2.2 links
 
 \bibitem{issue-compiling-fails} GitHub,
-	\textit{cargo-semver-checks -- Issue \#317} (2023) \\
+	\textit{cargo-semver-checks -- Issue \#317} (03/2023) \\
 	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/317}
 
 
 %%% section 2.3 links
 
 \bibitem{pyo3-issue} GitHub,
-    \textit{PyO3 -- Issue \#285} (2018) \\
+    \textit{PyO3 -- Issue \#285} (03/2023) \\
     \url{https://github.com/PyO3/pyo3/issues/285}
 
 \bibitem{clap-issue} GitHub,
-    \textit{clap -- Issue \#3876} (2022) \\
+    \textit{clap -- Issue \#3876} (03/2023) \\
     \url{https://github.com/clap-rs/clap/issues/3876}
 
 \bibitem{block-buffer-issue} GitHub,
-    \textit{RustCrypto -- Issue \#22} (2023) \\
+    \textit{RustCrypto -- Issue \#22} (03/2023) \\
     \url{https://github.com/RustCrypto/utils/issues/22}
 
 \bibitem{paper} Hao Li, Filpe R Cogo, Cor-Paul Bezemer, \\
-    \textit{An Empirical Study of Yanked Releases in the Rust Package Registry} (2022) \\
+    \textit{An Empirical Study of Yanked Releases in the Rust Package Registry} (03/2023) \\
 	\url{https://arxiv.org/pdf/2201.11821.pdf}
 
 
 %%% section 2.4 links
 
 \bibitem{elm-lang} Evan Czaplicki,
-    \textit{Elm Programming Language} (2021) \\
+    \textit{Elm Programming Language} (03/2023) \\
     \url{https://elm-lang.org/}
 
 
 %%% section 3.2 links
 
 \bibitem{issue-merge-cargo} GitHub,
-	\textit{cargo-semver-checks -- Issue \#61} (2023) \\
+	\textit{cargo-semver-checks -- Issue \#61} (02/2023) \\
 	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/61}
 
 \bibitem{issue-cli-interface} GitHub,
-	\textit{cargo-semver-checks -- Issue \#86} (2023) \\
+	\textit{cargo-semver-checks -- Issue \#86} (02/2023) \\
 	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/86}
 
 
@@ -1817,48 +1817,48 @@ to already see it making such an impact, hoping to soon allow everyone to be fea
 %%% section 5.3 links
 
 \bibitem{github_actions_toolkit} GitHub,
-	\textit{GitHub Actions Toolkit} (2023) \\
+	\textit{GitHub Actions Toolkit} (05/2023) \\
 	\url{https://github.com/actions/toolkit}
 
 \bibitem{crates_io_sparse_protocol} Inside Rust Blog,
-\textit{Help test Cargo's new index protocol} (2023) \\
+\textit{Help test Cargo's new index protocol} (05/2023) \\
 	\url{https://blog.rust-lang.org/inside-rust/2023/01/30/cargo-sparse-protocol.html}
 
 
 %%% section 5.4 links
 
 \bibitem{issue-rustdoc-our-tests} GitHub,
-	\textit{Rust -- Issue \#110815} (2023) \\
+	\textit{Rust -- Issue \#110815} (04/2023) \\
 	\url{https://github.com/rust-lang/rust/issues/110815}
 
 
 %%% section 6.1 links
 
 \bibitem{github-csv-results} GitHub,
-	\textit{GitHub repository containing the semver-crater results} (2023) \\
+	\textit{GitHub repository containing the semver-crater results} (05/2023) \\
 	\url{https://github.com/tonowak/bachelors-thesis/}
 
 
 %%% section 7.2 links
 
 \bibitem{responsibilities-tomasz} GitHub,
-	\textit{Contributions authored by Tomasz} (2023) \\
+	\textit{Contributions authored by Tomasz} (04/2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3Atonowak&s=updated&type=Issues}
 
 \bibitem{responsibilities-michal} GitHub,
-	\textit{Contributions authored by Michał} (2023) \\
+	\textit{Contributions authored by Michał} (04/2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3Astaniewzki&s=updated&type=Issues}
 
 \bibitem{responsibilities-mieszko} GitHub,
-	\textit{Contributions authored by Mieszko} (2023) \\
+	\textit{Contributions authored by Mieszko} (04/2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3Amgr0dzicki&s=updated&type=Issues}
 
 \bibitem{responsibilities-mieszko-action-tests} GitHub,
-	\textit{mgr0dzicki/cargo-semver-action-ref-slice} (2023) \\
+	\textit{mgr0dzicki/cargo-semver-action-ref-slice} (04/2023) \\
 	\url{https://github.com/mgr0dzicki/cargo-semver-action-ref-slice}
 
 \bibitem{responsibilities-bartosz} GitHub,
-	\textit{Contributions authored by Bartosz} (2023) \\
+	\textit{Contributions authored by Bartosz} (04/2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3ASmolSir&s=updated&type=Issues}
 
 
@@ -1869,11 +1869,11 @@ to already see it making such an impact, hoping to soon allow everyone to be fea
 % 	\url{https://crates.io/crates/cargo-semver-checks}
 
 \bibitem{make-ci-runs-faster} GitHub,
-	\textit{Make CI runs faster} (2023) \\
+	\textit{Make CI runs faster} (05/2023) \\
 	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/214}
 
 \bibitem{user-contribution-1} GitHub,
-	\textit{Cache generated rustdoc for registry baselines} \\
+	\textit{Cache generated rustdoc for registry baselines} (05/2023) \\
 	\url{https://github.com/obi1kenobi/cargo-semver-checks/pull/339}
 
 \end{thebibliography}
