--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -547,7 +547,7 @@ received from rustdoc.
 
 Trustfall is a special query engine, designed to query any data source or a combination of data
 sources such as APIs, raw files (JSON, CSV, etc.), git version control, webpages and many more.
-Its main idea is to represent the data as an organised graph with vertices and edges that the
+Its main idea is to represent the data as an organized graph with vertices and edges that the
 engine can traverse. To navigate during the search, it follows consecutive filtering rules defined
 by the user. In cargo-semver-checks, these rules are contained within \texttt{.ron} files which
 are called \texttt{lints} inside the project (more detail in section
