--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -99,7 +99,7 @@ convenient and accessible for the Rust community. We extended the command-line i
 according to the users' requests and needs, developed a brand new version of
 the tool's GitHub Action and implemented various new lints to prevent even more breaking changes.
 Additionally we greatly expanded the test suite, fixed multiple bugs that previously
-made it difficult for the community to use the tool and we further improved the codebase to attract
+made it difficult for the community to use the tool and further improved the codebase to attract
 new contributors.
 
 Furthermore we present the results of running cargo-semver-checks on a large number
