\texttt{cargo-semver-checks}

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -102,7 +102,7 @@ Additionally we greatly expanded the test suite, fixed multiple bugs that previo
 made it difficult for the community to use the tool and further improved the codebase to attract
 new contributors.
 
-Furthermore we present the results of running cargo-semver-checks on a large number
+Furthermore we present the results of running \texttt{cargo-semver-checks} on a large number
 of popular crates. This research proved that the problem is far more common than expected.
 In addition to gathering statistics on occurrences of different semantic versioning breaks,
 it revealed the most frequent ones which the developers should pay closer attention to
@@ -113,7 +113,7 @@ well-established position in the Rust ecosystem. The tool is actively used by so
 the largest Rust libraries such as tokio, libp2p, data-encoding and pest (which have
 over 150 million downloads). It also has earned itself the trust of numerous worldwide
 known companies including Amazon, Microsoft, Adobe and Mozilla. Their developers
-use cargo-semver-checks on a daily basis to prevent semantic versioning breaks in their
+use \texttt{cargo-semver-checks} on a daily basis to prevent semantic versioning breaks in their
 publicly available libraries.
 
 The tool is to become part of the official package manager and build system for the Rust language.
