split long sentence.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -84,7 +84,7 @@ to fix them and the users have to temporarily downgrade the library's version. T
 concern as the problem is alarmingly common but has never been satisfactorily resolved so far.
 
 The following document describes the development of an open-source tool called
-\texttt{cargo-semver-checks} that solves this problem by detecting changes that are
+\texttt{cargo-semver-checks} that solves this problem. It detects changes that are
 not backwards-compatible in Rust libraries' codes before releasing a new version.
 
 Instead of directly looking at the source code, the tool compares the automatically generated
