--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -104,8 +104,8 @@ new contributors.
 
 Furthermore we present the results of running \texttt{cargo-semver-checks} on a large number
 of popular crates. This research proved that the problem is far more common than expected.
-In addition to gathering statistics on occurrences of different semantic versioning breaks,
-it revealed the most frequent ones which the developers should pay closer attention to
+Moreover, gathering statistics on occurrences of different semantic versioning breaks
+revealed the most frequent ones which the developers should pay closer attention to
 in their projects.
 
 The tool has shown a constant increase in its usage rates, growing up to its
