--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -442,7 +442,7 @@ is perceived as a~bug in the tool. There are two advantages with this approach:
 	\item the tool is suited to be used in continuous integration for finding semver issues in
 		commits or Pull Requests -- it reports semver breaks only when its output should not be
 		ignored and requires manual inspection,
-	\item we are avoiding a~scenario in which a~user encounters false-positives, they become
+	\item we are avoiding a~scenario in which a~user encounters false-positives, becomes
 		frustated and their trust in the tool is reduced, making them less likely to use the
 		tool again.
 \end{itemize}
