--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -155,7 +155,7 @@ make it since the kernel's first release in 1991.
 
 Cargo is the official package manager for Rust. It is responsible for compiling the user's
 packages, downloading their dependencies and uploading them to the selected package registry.
-It is important to note that in Rust, packages are often refered to as \texttt{crates} with both
+It is important to note that in Rust, packages are often referred to as \texttt{crates} with both
 names being equivalent and commonly used. Most of the currently publicly available crates are
 stored in the Rust community's default crate registry, \texttt{crates.io}. The role of the
 registries is to allow users to easily find appropriate crates for their projects, as well as
@@ -269,7 +269,7 @@ it is safe to update a~dependency within a~compatibility range without it breaki
 This range can be defined in the manifest using the \textit{version requirement syntax}, allowing
 the user to select the upper bound for maximum compatible number anywhere from one, specific
 version (not allowing any updates), to no limit at all (equivalent to allowing even major updates).
-The default behaviour is to update until the next major version.
+The default behavior is to update until the next major version.
 
 % When updating, if multiple packages share a~dependency, cargo's resolver attempts to ensure
 % that they use as few versions of it as possible (ideally all packages may share a~dependency
@@ -290,8 +290,8 @@ yanked, one of the main causes remains breaking semver.
 \section{Abstract syntax tree (AST)}\label{r:section_ast}
 
 An abstract syntax tree represents the abstract syntactic structure of the text (often source code)
-in form of a~tree, where every node denotes an~occurence of some construct in it. The tree is
-called \say{abstract}, because it omits some syntax details, such as parantheses or if statements,
+in form of a~tree, where every node denotes an~occurrence of some construct in it. The tree is
+called \say{abstract}, because it omits some syntax details, such as parentheses or if statements,
 and focuses on structural or contextual details.
 
 % In most of the well-established programming languages, semver validation is incredibly difficult
@@ -389,7 +389,7 @@ Some of popular Rust crates with millions of downloads happened to break semver:
 
 Those were examples of popular crates with experienced maintainers, but the problem is even more
 prominent in less used crates where developers might not know the common semver pitfalls. A paper
-\cite{paper} claims that out of the yanked (un-publised) releases, semver break was the leading
+\cite{paper} claims that out of the yanked (un-published) releases, semver break was the leading
 reason for yanking, with a~shocking 43\% rate. It also mentions that 3.7\% of all releases
 (and there is more than 300 000 of them already) are yanked, which shows the scale of the problem
 -- thousands of detected semver breaks.
@@ -398,9 +398,9 @@ reason for yanking, with a~shocking 43\% rate. It also mentions that 3.7\% of al
 
 There are not many great tools for semver checking in existence. The main reason for that is that
 the semantics of popular languages make complete and automatic verification practically impossible.
-There are some initiatives to combat this. For example, the Elm languge \cite{elm-lang} by design
+There are some initiatives to combat this. For example, the Elm language \cite{elm-lang} by design
 enforces semantic versioning. Its type system enables automatic detection of all API changes.
-Outside of that, it does not appear that tools for checking semver in estabilished languages like
+Outside of that, it does not appear that tools for checking semver in established languages like
 Python or C++ are commonly used in the industry.
 
 Unfortunately, the Rust language's semantics were also not designed with semver in mind.
@@ -443,7 +443,7 @@ is perceived as a~bug in the tool. There are two advantages with this approach:
 		commits or Pull Requests -- it reports semver breaks only when its output should not be
 		ignored and requires manual inspection,
 	\item we are avoiding a~scenario in which a~user encounters false-positives, becomes
-		frustated and their trust in the tool is reduced, making them less likely to use the
+		frustrated and their trust in the tool is reduced, making them less likely to use the
 		tool again.
 \end{itemize}
 
@@ -460,7 +460,7 @@ toolchain, which has been initiated by one of the developers working on cargo
 a~cargo subcommand and would be a~huge step towards reducing the number of package releases with
 semver issues.
 
-Because of those plans, the commandline interface of the project is similar to the interface of
+Because of those plans, the command-line interface of the project is similar to the interface of
 cargo's subcommands. Additionally, cargo developers take part in discussions about the design of
 the interface \cite{issue-cli-interface} or sometimes even review changes to the code or develop
 new functionalities.
@@ -546,7 +546,7 @@ cargo-semver-checks. For this reason, the tool uses Trustfall to access and quer
 received from rustdoc.
 
 Trustfall is a~special query engine, designed to query any data source or a~combination of data
-sources such as APIs, raw files (JSON, CSV, etc.), git version control, webpages and many more.
+sources such as APIs, raw files (JSON, CSV, etc.), git version control, web pages and many more.
 Its main idea is to represent the data as an~organized graph with vertices and edges that the
 engine can traverse. To navigate during the search, it follows consecutive filtering rules defined
 by the user. In cargo-semver-checks, these rules are contained within \texttt{.ron} files which
@@ -624,7 +624,7 @@ the following fields:
 		detecting semver violations (described below in more detail),
 	\item \texttt{arguments} -- optional, user-defined Trustfall constants for the query,
 	\item \texttt{error\_message} -- a~longer and more technical information, telling the user
-	    about the exact semver violation that occured and what could have caused it,
+	    about the exact semver violation that occurred and what could have caused it,
 	\item \texttt{per\_result\_error\_template} -- the name of the item that broke semver and
 	    its exact position in the code.
 \end{itemize}
@@ -669,7 +669,7 @@ During its execution, Trustfall successively:
 	\item collects all of the baseline crate's public Enums, tagging their paths,
 	\item collects all of the current crate's public Enums such that their path is present among
 		the baseline version's tagged paths,
-	\item counts the occurences of the filtered current Enums among the filtered baseline Enums,
+	\item counts the occurrences of the filtered current Enums among the filtered baseline Enums,
 	\item filters the current Enums by their resulting count being zero,
 	\item returns the Enums that passed the last filtering.
 \end{itemize}
@@ -814,7 +814,7 @@ crates often have a~feature that breaks semver by design, which
 we discovered when working on the semver-crater \ref{r:section_results_semver_crater}.
 Now the users can adjust the set of features for their specific use cases.
 
-The new default behaviour is to include all the features,
+The new default behavior is to include all the features,
 filtering out heuristically the ones that break semver by looking at
 the feature's name. For example, a~feature named {\ttfamily unstable} would not be
 included. The list of banned names was created by looking
@@ -828,7 +828,7 @@ the caching mechanism is not used when a~user changes the enabled features
 (which might change the rustdoc).
 
 We also improved the user experience by spotting and fixing a~couple bugs
-in the command-line interface -- both in the tool's behaviour
+in the command-line interface -- both in the tool's behavior
 in combination with specific flags and in its output messages.
 For details, see section \ref{r:section_bugfixes}.
 
@@ -873,7 +873,7 @@ adds numerous features:
 \end{itemize}
 Moreover, the action now includes several optimizations of the running time:
 \begin{itemize}
-	\item cargo-semver-checks tool is downloaded as a~precompiled binary instead of being built from source,
+	\item cargo-semver-checks tool is downloaded as a~pre-compiled binary instead of being built from source,
 	\item the rustdoc of the baseline version is cached between the action's runs, so that it is generated
 		only once. The caching strategy might be adjusted by the user using inputs \texttt{shared-key}
 		and \texttt{prefix-key} (e.g. to share the cache between different GitHub jobs),
@@ -897,11 +897,11 @@ but also in cargo-semver-checks itself, and will make it easier to maintain the 
 
 \section{Better test suite with integration tests}\label{r:section_test_suite}
 
-Before our contributions, each lint had its own, dedicated testcase consisting of:
+Before our contributions, each lint had its own, dedicated test case consisting of:
 \begin{itemize}
-\item the Rust sourcecode that could be compiled in two different ways (producing
+\item the Rust source code that could be compiled in two different ways (producing
 \say{current} and \say{baseline} codes),
-\item a~file with the results of executing its Trustfall query over this sourcecode.
+\item a~file with the results of executing its Trustfall query over this source code.
 \end{itemize}
 We have replaced this system with a~new one that contains numerous \say{crate pairs}
 (two separate directories called \say{current} and \say{baseline} with their own
@@ -940,7 +940,7 @@ Just the writing of such tests helped us find other bugs
 with various command-line arguments and they detected that it wrongly handled some arguments.
 
 The integration tests were more appropriate to be written as a~GitHub workflow job
--- cloning the user's git repo takes time and memory, requires internet connection
+-- cloning the user's git repository takes time and memory, requires internet connection
 and often the projects are platform-specific,
 thus the tests are not suited to be run locally.
 But we also had some tests which were better suited to local runs alongside the crate pair tests
@@ -1037,7 +1037,7 @@ Apart from that, we reported a~few bugs that were or are to be fixed by other co
 		macros with the same names,
 	\item CLI of v0.18.2 not looking for the baseline in the registry
 		as it was supposed to do,
-	\item the precompiled tool crashing on Windows machines,
+	\item the pre-compiled tool crashing on Windows machines,
 	\item output of the tool on the bevy-audio crate seeming
 		like it was producing a~false positive,
 	\item duplicated lint's output on the bevy-render crate,
@@ -1383,7 +1383,7 @@ and immediate contact with him through chat).
 			\item Improved the tests, which sped up the process of adding new lints.
 				More precisely:
 				\begin{itemize}
-					\item splitted each test into separate pairs of crates (that are baseline
+					\item split each test into separate pairs of crates (that are baseline
 						and current crates for the tool),
 					\item made it so that the tool runs each lint on all testing crates
 						(which has detected multiple new false-positives),
@@ -1392,10 +1392,10 @@ and immediate contact with him through chat).
 				\end{itemize}
 			\item Made a~change in the tests that runs the tool on crates that did not change
 				to detect possible false-positives.
-			\item Commited changes suggested by a~new version of the Rust formatter.
+			\item Committed changes suggested by a~new version of the Rust formatter.
 			\item Found and fixed a~bug where the printed baseline version was incorrect.
 			\item Added a~new type of integration tests, which locally checks how the tool behaves
-				with given commandline arguments, and implemented a~test that checks whether
+				with given command-line arguments, and implemented a~test that checks whether
 				a~recent bug (where the lint files were not present in the binary) was fixed.
 			\item Diagnosed a~problem where the tests stopped working, fixed the adapter after
 				a~new rustdoc version which stopped exporting inlined items of external crates
@@ -1422,7 +1422,7 @@ and immediate contact with him through chat).
 				% and finally switching to the new rustdoc generation logic.
 			\item Reported a~bug where the tool failed to work when generating rustdoc of a~crate
 				that only has yanked releases.
-			\item Reported a~bug where the tool prints some internal data while cheching
+			\item Reported a~bug where the tool prints some internal data while checking
 				the \texttt{clap} crate.
 			\item Found and fixed a~bug where the CI job wrongly checked the exit code in one
 				of the integration tests.
@@ -1476,7 +1476,7 @@ and immediate contact with him through chat).
                             \item Reworked the code that handles crate configuration and adjusted
                                     the default feature configuration.
                                     Previously, the crates were always built with all the features enabled.
-                                    Currently, the default behaviour is to enable a~heuristically-choosen
+                                    Currently, the default behavior is to enable a~heuristically-chosen
                                     subset of features, as described in \ref{r:section_cli}
                             \item Implemented all the logic for calculating and building the crate
                                     with the final feature set.
@@ -1503,7 +1503,7 @@ and immediate contact with him through chat).
 				Introduced a~fix and created a~set of unit tests for choosing the baseline crate.
 			\item Reported a~problem in release \texttt{v0.18.2} where the CLI was not looking for
 				the baseline in the registry as it was supposed to do.
-			\item Reported a~bug where the precompiled tool crashed on Windows machines.
+			\item Reported a~bug where the pre-compiled tool crashed on Windows machines.
 				Added a~CI job that checks for similar issues.
 			\item Found and fixed a~bug that made the CLI ignore the \texttt{-{}-release-type} option.
 			\item Developed a~new version of \texttt{cargo-semver-checks-action}, which consisted of:
@@ -1666,7 +1666,7 @@ improvements that he decided to contribute and implemented them \cite{user-contr
 
 The final impact of our work has been an~order of magnitude greater than we expected.
 Since the early days of our contributions, we could see the constant increase
-in cargo-semver-checks usage as it was growing to its current, well-estabilished position in
+in cargo-semver-checks usage as it was growing to its current, well-established position in
 the Rust ecosystem. Given its wide and enthusiastic adoption by both corporate and hobbyist
 projects, and the high frequency of accidental semantic versioning violations when it is not
 in use, the tool's ultimate goal of becoming a~built-in feature of cargo seems closer than it has
