--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -82,7 +82,7 @@ by a~dependency change.
 \chapter*{Executive summary}
 \addcontentsline{toc}{chapter}{Executive summary}
 
-We have discovered that more than 1~in~6 of the largest Rust libraries have broken a~multitude
+We have discovered that more than 1~in~6 of the most commonly used Rust libraries have broken a~multitude
 of projects by publishing new releases, causing their users' code to suddenly stop compiling.
 In such cases, the packages' maintainers have to delete the faulty releases or create patches
 to fix them and the users have to temporarily downgrade the library's version. This is a~serious
