--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -82,11 +82,12 @@ by a~dependency change.
 \chapter*{Executive summary}
 \addcontentsline{toc}{chapter}{Executive summary}
 
-We have discovered that more than 1~in~6 of the most commonly used Rust libraries have broken a~multitude
-of projects by publishing new releases, causing their users' code to suddenly stop compiling.
-In such cases, the packages' maintainers have to remove the faulty releases or create patches
-to fix them and the users have to temporarily downgrade the library's version. This is a~serious
-concern as the problem is alarmingly common but has never been satisfactorily resolved so far.
+When new releases of Rust libraries are published, it may happen that unintended public API changes
+are made and cause their users' code to suddenly stop compiling. In such cases, the packages'
+maintainers have to remove the faulty releases or create patches to fix them and the users
+have to temporarily downgrade the library's version. We have discovered that more than 1~in~6
+of the most commonly used Rust libraries had this issue. This is a~serious concern as the problem
+is alarmingly common but has never been satisfactorily resolved so far.
 
 The following document describes the development of \texttt{cargo-semver-checks}, an~open-source
 tool called that solves this problem. It detects changes that are
