--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -90,7 +90,7 @@ of the most commonly used Rust libraries had this issue. This is a~serious conce
 is alarmingly common but has never been satisfactorily resolved so far.
 
 The following document describes the development of \texttt{cargo-semver-checks}, an~open-source
-tool called that solves this problem. It detects changes that are
+tool that solves this problem. It detects changes that are
 not backwards-compatible in Rust libraries' code before releasing a~new version.
 
 Instead of directly looking at the source code, the tool compares the automatically generated
