--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -91,7 +91,7 @@ is alarmingly common but has never been satisfactorily resolved so far.
 
 The following document describes the development of \texttt{cargo-semver-checks}, an~open-source
 tool that solves this problem. It detects changes that are
-not backwards-compatible in Rust libraries' code before releasing a~new version.
+not backwards-compatible in Rust library's code before a~new version is released by its maintainers.
 
 Instead of directly looking at the source code, the tool compares the automatically generated
 documentation of two versions of the library's public API. To parse this data, it uses
