Remove other languages

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -97,8 +97,8 @@ Instead of directly looking at the source code, the tool compares the automatica
 documentation of two versions of the library's public API. To parse this data, it uses
 a~query engine called \texttt{Trustfall} that is capable of reading from any organized database,
 allowing for the checks run by the tool to be written in form of short queries. Thanks to
-this approach, the project is much more sustainable than other attempts of this kind among Rust
-and other languages, which are not maintained anymore.
+this approach, the project is much more sustainable than other attempts of this kind,
+which are not maintained anymore.
 
 We worked in a~team of four as part of our bachelor's thesis on improving the tool to make it
 convenient and accessible for the Rust community. We extended the command-line interface
