--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1148,9 +1148,10 @@ new compiler versions on a~large number of crates.
 
 It fetches a~list of one thousand crates available on crates.io sorted by the number of
 all-time downloads, which often are the biggest crates and Rust libraries
-that strictly adhere to semantic versioning. For each crate,
-it then retrieves the available releases which were not yanked
-and compares every two adjacent, non-yanked releases and parses the output.
+that strictly adhere to semantic versioning. For each crate
+it then retrieves the available releases which were not yanked,
+runs the default configuration of cargo-semver-checks to compare every two adjacent,
+non-yanked releases and parses the output.
 The results are saved to a~CSV file.
 Because of the sheer number of releases that needs to be checked, the results take several days
 to generate.
