--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1150,12 +1150,10 @@ It fetches a~list of one thousand crates available on crates.io sorted by the nu
 all-time downloads, which often are the biggest crates and Rust libraries
 that strictly adhere to semantic versioning. For each crate
 it then retrieves the available releases which were not yanked
-and compares every two adjacent, non-yanked releases and parses the 
+and compares every two adjacent, non-yanked releases and parses the
 output of those releases compiled with the crate's default features.
 We considered compiling a crate's releases with all features,
-but then often the crates stopped compiling altogether
-(the option to run cargo-semver-checks with a heuristically generated list of features
-was added after we analyzed the semver-crater results).
+but then often the crates stopped compiling altogether.
 The results are saved to a~CSV file.
 Because of the sheer number of releases that needs to be checked, the results take several days
 to generate.
