--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1084,11 +1084,16 @@ that it is part of the public API accessible by the user and not marked \texttt{
 Thus, we are confident that each result is a~true-positive report pointing out a~real
 semver violation.
 
-Interestingly, sometimes the majority of Rust community decides that a certain change is not
-considered as breaking. This can happen e.g. after a new feature is introduced to the official
-language standard. The developers may decide to use it in their crates without an appropriate change
-of the version number. Such breaks are just reported by the tool as it uses the generated
-documentation and ignores all unofficial conventions.
+Interestingly, some changes that are breaking according to today's conventions are still
+commonly accepted as non-breaking by the majority of Rust community. This is because some language
+features were already in use by the developers prior to their official introduction (such as the
+\texttt{\#[non\_exhaustive]} attribute). Because of this, checking older releases with current Rust
+standards can occasionally produce unintuitive results.
+
+However, this is the case with only a minority of semver violations. The general difficulty
+of semver remains unchanged regardless of the ever-changing Rust versions and conventions.
+This makes automated tools like cargo-semver-checks an even more valuable assistance for
+the developers.
 
 The following table shows for each lint how often it was triggered:
 
