--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1087,12 +1087,12 @@ semver violation.
 Interestingly, some changes that are theoretically breaking in the Rust language are commonly
 accepted by the majority of the community. The tool seeks to be up-to-date with the current
 conventions, but as they change over time, running cargo-semver-checks on older releases can
-occasionally produce unintuitive results. For example, the developers used close imitations of some
-language features prior to their official introduction. To then use the novelties, they had to
-purposely make breaking changes in their crates. However, this is the case with only a minority
-of semver violations. The general difficulty of semver remains unchanged regardless of
-the ever-changing Rust versions and conventions. This makes automated tools like cargo-semver-checks
-an even more valuable assistance for the developers.
+occasionally produce unintuitive results. For example, the developers used close imitations of the
+\texttt{\#[non_exhaustive]} attribute prior to its official introduction. To then use new attribute
+itself, they had to purposely make breaking changes in their crates. However, this is the case with
+only a minority of semver violations. The general difficulty of semver remains unchanged
+regardless of the ever-changing Rust versions and conventions. This makes automated tools like
+cargo-semver-checks an even more valuable assistance for the developers.
 
 The following table shows for each lint how often it was triggered:
 
