--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1089,11 +1089,10 @@ accepted by the majority of the community. The tool seeks to be up-to-date with 
 conventions, but as they change over time, running cargo-semver-checks on older releases can
 occasionally produce unintuitive results. For example, the developers used close imitations of the
 \texttt{\#[non\_exhaustive]} attribute prior to its official introduction, but in order to replace
-them with the newly
-added attribute, they had to purposely make breaking changes in their crates. However, this is the case with
-only a minority of semver violations. The general difficulty of semver remains unchanged
-regardless of the ever-changing Rust versions and conventions. This makes automated tools like
-cargo-semver-checks an even more valuable assistance for the developers.
+them with the newly added attribute, they had to purposely make breaking changes in their crates.
+However, this is the case with only a~minority of semver violations. The general difficulty of
+semver remains unchanged regardless of the ever-changing Rust versions and conventions. This makes
+automated tools like cargo-semver-checks an~even more valuable assistance for the developers.
 
 The following table shows for each lint how often it was triggered:
 
